# twitch-pipe

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: config.rs  discord.rs  main.rs
